fix(qsnp): oOM caused by large number of failed filter reads at same location